refactor and move job records to cloud
handle empty jobs

refactor. Might work /shrug

trying this

trying this

trying that

trying this

avoid circular imports

avoid circular imports

refactor

add user

html sucks

try different patch method

I suck at json

wat

wat

wat

put

handle big playlists

investigare

investigare

it ain't easy being stupid

it ain't easy being stupid

it ain't easy being stupid

--- a/templates/list_elements.html
+++ b/templates/list_elements.html
@@ -1,3 +1,3 @@
 {% for name, id in data %}
-    <p><a href="http://restrictify.herokuapp.com/playlist/restrict?playlist_id={{ id }}&n={{ n }}">{{ name }}</a></p>
+    <p><a href="http://restrictify.herokuapp.com/playlist/restrict?playlist_id={{ id }}&n={{ n }}&user={{ user }}">{{ name }}</a></p>
 {% endfor %}
